--- a/style.css
+++ b/style.css
@@ -68,6 +68,74 @@ p{
     padding: 10px;
     border-radius: 5px;
 }
+
+.logout{
+    display: flex;
+    justify-content: flex-end;
+}
+.logout li{
+    list-style: none;
+}
+.logout a{
+    color: #fff;
+    font-size: 18px;
+}
+.photo-profile{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: relative;
+    margin: 0 auto;
+    z-index: 5;
+}
+.body-profile{
+    padding-top: 50px;
+    height: calc(100% - 50px);
+    margin-top: -50px;
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(18.8px);
+    -webkit-backdrop-filter: blur(18.8px);
+    border: 2px solid rgba(255, 255, 255, 1);
+}
+.body-profile{
+    text-align: center;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #fff;
+    font-style: italic;
+    font-weight: 500;
+}
+.name{
+    margin: 0;
+    font-size: 21px;
+    color: #1F365E;
+    font-weight: 700;
+}
+.surname::after {
+    content: '';
+    display: block;
+    width: 80%;
+    height: 5px;
+    background-color: #1F365E;
+    margin: 0 auto;
+    
+}
+.position{
+    font-size: 19px;
+    background-color: #1F365E;
+    padding: 8px;
+}
+.courses{
+    background-color: #ecf2ff;
+    text-align: center;
+    font-weight: 700;
+    font-style: italic;
+    color: #1F365E;
+    text-transform: uppercase;
+    font-size: 19px;
+}
 .footer{
     height: auto;
     text-align: center;
